--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,33 @@
 user root;
-worker_processes  1;
-
+worker_processes  auto;
+worker_rlimit_nofile 300000;
 events {
-  worker_connections  1024;
+  worker_connections  65535;
+  use epoll;
+  multi_accept on;
 }
 
+
 http {
+    log_format ltsv "time:$time_local"
+        "\thost:$remote_addr"
+        "\tforwardedfor:$http_x_forwarded_for"
+        "\treq:$request"
+        "\tmethod:$request_method"
+        "\turi:$request_uri"
+        "\tstatus:$status"
+        "\tsize:$body_bytes_sent"
+        "\treferer:$http_referer"
+        "\tua:$http_user_agent"
+        "\treqtime:$request_time"
+        "\truntime:$upstream_http_x_runtime"
+        "\tapptime:$upstream_response_time"
+        "\tcache:$upstream_http_x_cache"
+        "\tvhost:$host"
+    ;
   upstream app {
     server 127.0.0.1:8080;
+    keepalive 32;
   }
 
   server {
