--- a/nginx.conf
+++ b/nginx.conf
@@ -15,8 +15,15 @@ http {
 
     root /home/isucon/webapp/public;
     include /etc/nginx/mime.types;
+    error_log /var/log/nginx/openresty_err.log;
 
     try_files $uri $uri/index.html @app;
+
+    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/count {
+      set $slot $1;
+      set $id $2;
+      content_by_lua_file "/etc/nginx/lua/counter.lua";
+    }
 
     location @app {
       proxy_set_header Host $http_host;
