--- a/nginx.conf
+++ b/nginx.conf
@@ -39,10 +39,32 @@ http {
 
     try_files $uri $uri/index.html @app;
 
+    location ~ /slots/([a-z0-9]+)/ad {
+      set $slot $1;
+      content_by_lua_file "/etc/nginx/lua/route_get_ad.lua";
+    }
+
+    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+) {
+      set $slot $1;
+      set $id $2;
+      content_by_lua_file "/etc/nginx/lua/route_get_ad_with_id.lua";
+    }
+
     location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/count {
       set $slot $1;
       set $id $2;
       content_by_lua_file "/etc/nginx/lua/counter.lua";
+    }
+
+    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/asset {
+      root /;
+      add_header Content-Type video/mp4;
+      try_files /store/$2 @error_json;
+    }
+
+    location @error_json {
+        add_header Content-Type application/json;
+	return 404 '{"error": "not_found"}';
     }
 
     location @app {
