--- a/nginx.conf
+++ b/nginx.conf
@@ -25,12 +25,14 @@ http {
         "\tcache:$upstream_http_x_cache"
         "\tvhost:$host"
     ;
-  upstream app {
-    server 127.0.0.1:8080;
+  upstream app1 {
+    server 52.198.140.176:80;
     keepalive 32;
   }
 
   server {
+    listen 80;
+    listen 8888;
     client_max_body_size 1G;
 
     root /home/isucon/webapp/public;
@@ -39,16 +41,7 @@ http {
 
     try_files $uri $uri/index.html @app;
 
-    location ~ /slots/([a-z0-9]+)/ad {
-      set $slot $1;
-      content_by_lua_file "/etc/nginx/lua/route_get_ad.lua";
-    }
 
-    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+) {
-      set $slot $1;
-      set $id $2;
-      content_by_lua_file "/etc/nginx/lua/route_get_ad_with_id.lua";
-    }
 
     location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/count {
       set $slot $1;
@@ -62,6 +55,30 @@ http {
       try_files /store/$2 @error_json;
     }
 
+    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/redirect {
+      set $slot $1;
+      set $id $2;
+      set $c $cookie_isuad;
+      content_by_lua_file "/etc/nginx/lua/redirect.lua";
+    }
+
+
+    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+) {
+      set $slot $1;
+      set $id $2;
+      content_by_lua_file "/etc/nginx/lua/route_get_ad_with_id.lua";
+    }
+
+    location ~ /slots/([a-z0-9]+)/ad {
+      set $slot $1;
+      content_by_lua_file "/etc/nginx/lua/route_get_ad.lua";
+    }
+
+    location /init {
+	content_by_lua 'os.execute("rm -rf /store/*")';
+
+    }
+
     location @error_json {
         add_header Content-Type application/json;
 	return 404 '{"error": "not_found"}';
@@ -69,7 +86,7 @@ http {
 
     location @app {
       proxy_set_header Host $http_host;
-      proxy_pass http://app;
+      proxy_pass http://app1;
     }
   }
 }
