--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
 
 
 
-    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/count {
+    location ~ /slots/([a-z0-9-_]+)/ads/([a-z0-9-_]+)/count {
       set $slot $1;
       set $id $2;
       content_by_lua_file "/etc/nginx/lua/counter.lua";
@@ -78,6 +78,7 @@ http {
 	content_by_lua 'os.execute("rm -rf /store/*")';
 
     }
+
 
     location @error_json {
         add_header Content-Type application/json;
