--- a/nginx.conf
+++ b/nginx.conf
@@ -76,9 +76,17 @@ http {
 
     location /init {
 	content_by_lua 'os.execute("rm -rf /store/*")';
+    }
+
+    location /javascripts {
+    root /home/isucon/webapp/public;
 
     }
 
+    location /stylesheets {
+    root /home/isucon/webapp/public;
+
+    }
 
     location @error_json {
         add_header Content-Type application/json;
