--- a/nginx.conf
+++ b/nginx.conf
@@ -43,19 +43,19 @@ http {
 
 
 
-    location ~ /slots/([a-z0-9-_]+)/ads/([a-z0-9-_]+)/count {
+    location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)/count {
       set $slot $1;
       set $id $2;
       content_by_lua_file "/etc/nginx/lua/counter.lua";
     }
 
-    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/asset {
+    location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)/asset {
       root /;
       add_header Content-Type video/mp4;
       try_files /store/$2 @error_json;
     }
 
-    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+)/redirect {
+    location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)/redirect {
       set $slot $1;
       set $id $2;
       set $c $cookie_isuad;
@@ -63,13 +63,13 @@ http {
     }
 
 
-    location ~ /slots/([a-z0-9]+)/ads/([a-z0-9]+) {
+    location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+) {
       set $slot $1;
       set $id $2;
       content_by_lua_file "/etc/nginx/lua/route_get_ad_with_id.lua";
     }
 
-    location ~ /slots/([a-z0-9]+)/ad {
+    location ~ /slots/([a-z0-9_-]+)/ad {
       set $slot $1;
       content_by_lua_file "/etc/nginx/lua/route_get_ad.lua";
     }
