--- a/nginx.conf
+++ b/nginx.conf
@@ -64,9 +64,13 @@ http {
 
 
     location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+) {
+      if ($request_method = GET) {
       set $slot $1;
       set $id $2;
       content_by_lua_file "/etc/nginx/lua/route_get_ad_with_id.lua";
+      }
+      	proxy_set_header Host $http_host;
+      	proxy_pass http://app1;
     }
 
     location ~ /slots/([a-z0-9_-]+)/ad {
