--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,7 @@ http {
 
     root /home/isucon/webapp/public;
     include /etc/nginx/mime.types;
+    access_log /var/log/nginx/a.log ltsv;
     error_log /var/log/nginx/openresty_err.log;
 
     try_files $uri $uri/index.html @app;
@@ -51,7 +52,8 @@ http {
 
     location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)/asset {
       root /;
-      add_header Content-Type video/mp4;
+      types        {};
+      default_type video/mp4;
       try_files /store/$2 @error_json;
     }
 
@@ -63,22 +65,28 @@ http {
     }
 
 
-    location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+) {
-      if ($request_method = GET) {
+    location ~ ^/slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)$ {
       set $slot $1;
       set $id $2;
       content_by_lua_file "/etc/nginx/lua/route_get_ad_with_id.lua";
-      }
+    }
+
+    location ~ ^/slots/([a-z0-9_-]+)/ads$ {
+		add_header Access-Control-Allow-Origin *;
+		add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+		add_header Access-Control-Allow-Headers "Origin, Authorization, Accept";
+		add_header Access-Control-Allow-Credentials false;
+
       	proxy_set_header Host $http_host;
       	proxy_pass http://app1;
     }
 
-    location ~ /slots/([a-z0-9_-]+)/ad {
+    location ~ ^/slots/([a-z0-9_-]+)/ad$ {
       set $slot $1;
       content_by_lua_file "/etc/nginx/lua/route_get_ad.lua";
     }
 
-    location /init {
+    location = /init {
 	content_by_lua 'os.execute("rm -rf /store/*")';
     }
 
@@ -93,11 +101,16 @@ http {
     }
 
     location @error_json {
-        add_header Content-Type application/json;
+        types        {};
+        default_type application/json;
 	return 404 '{"error": "not_found"}';
     }
 
     location @app {
+		add_header Access-Control-Allow-Origin *;
+		add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+		add_header Access-Control-Allow-Headers "Origin, Authorization, Accept";
+		add_header Access-Control-Allow-Credentials false;
       proxy_set_header Host $http_host;
       proxy_pass http://app1;
     }
