--- a/nginx.conf
+++ b/nginx.conf
@@ -52,7 +52,7 @@ http {
 
     location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)/asset {
       root /;
-      types        {};
+      types        {}
       default_type video/mp4;
       try_files /store/$2 @error_json;
     }
@@ -101,7 +101,7 @@ http {
     }
 
     location @error_json {
-        types        {};
+        types        {}
         default_type application/json;
 	return 404 '{"error": "not_found"}';
     }
