--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,7 @@ http {
         "\tvhost:$host"
     ;
   upstream app1 {
-    server 127.0.0.1:8080;
+    server /tmp/unicorn.sock;
     keepalive 32;
   }
 
@@ -37,10 +37,12 @@ http {
 
     root /home/isucon/webapp/public;
     include /etc/nginx/mime.types;
-    access_log /var/log/nginx/a.log ltsv;
-    error_log /var/log/nginx/openresty_err.log;
 
     try_files $uri $uri/index.html @app;
+
+  tcp_nopush  on;
+  tcp_nodelay on;
+  etag off;
 
 
 
@@ -51,6 +53,7 @@ http {
     }
 
     location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)/asset {
+      open_file_cache max=200;
       root /;
       types        {}
       default_type video/mp4;
@@ -91,11 +94,14 @@ http {
     }
 
     location /javascripts {
+      open_file_cache max=200;
     root /home/isucon/webapp/public;
 
     }
 
     location /stylesheets {
+      open_file_cache max=200;
+
     root /home/isucon/webapp/public;
 
     }
