--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,7 @@ http {
         "\tvhost:$host"
     ;
   upstream app1 {
-    server /tmp/unicorn.sock;
+    server unix:/tmp/unicorn.sock;
     keepalive 32;
   }
 
