--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,8 @@ http {
     root /home/isucon/webapp/public;
     include /etc/nginx/mime.types;
 
+    keepalive_timeout 0;
+
     try_files $uri $uri/index.html @app;
 
   tcp_nopush  on;
