--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
     root /home/isucon/webapp/public;
     include /etc/nginx/mime.types;
 
-    keepalive_timeout 0;
+    keepalive_timeout 10;
 
     try_files $uri $uri/index.html @app;
 
@@ -56,6 +56,7 @@ http {
 
     location ~ /slots/([a-z0-9_-]+)/ads/([a-z0-9_-]+)/asset {
       open_file_cache max=200;
+      expires 300000;
       root /;
       types        {}
       default_type video/mp4;
@@ -98,12 +99,14 @@ http {
     location /javascripts {
       open_file_cache max=200;
     root /home/isucon/webapp/public;
+      expires 300000;
 
     }
 
     location /stylesheets {
       open_file_cache max=200;
 
+      expires 300000;
     root /home/isucon/webapp/public;
 
     }
